--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -6,15 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/loadingBar"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
+
     <TextView
         android:id="@+id/errorTextView"
         android:text="@string/errortext"
@@ -27,6 +20,10 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+
+
+
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/feedSwiper"
@@ -112,4 +109,49 @@
         </LinearLayout>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/loadingBar"
+        app:shimmer_duration="1200"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+            <include layout="@layout/row_movie_layout" />
+
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
